Reworked project (created separated classes and more)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,11 @@ SET(CMAKE_CXX_STANDARD 23)
 SET(CXX_STANDARD_REQUIRED YES)
 FILE(GLOB SOURCE "*.hpp" "*.cpp")
 INCLUDE_DIRECTORIES("..\\include")
+
+IF(MSVC)
+	ADD_COMPILE_OPTIONS("/Zc:__cplusplus")
+ENDIF()
+
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE})
 
 IF(MSVC)
